Corrección de Login y nueva rama

--- a/V CICLO/Taller de Programacion Web/login.html
+++ b/V CICLO/Taller de Programacion Web/login.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link href="/Css/EstilosLogin.Css" rel="stylesheet">
+  <link href="EstilosLogin.css" rel="stylesheet">
 </head>
 
 <body>
   <div class="grid">
     <div class="barras_horizontales barra_superior">GCN</div>
-    <div class="content_img"><img src="/Imagen/8445909.jpg"></div>
+    <div class="content_img"><img src="img/login.jpeg"></div>
     <div class="content_form">
       <form>
         <h2>INGRESA TUS DATOS PARA <br>INICIAR SECION</h2>
