Corrección de errores

--- a/V CICLO/Taller de Programacion Web/login.html
+++ b/V CICLO/Taller de Programacion Web/login.html
@@ -11,24 +11,24 @@
 <body>
   <div class="grid">
     <div class="barras_horizontales barra_superior">GCN</div>
-    <div class="content_img"><img src="img/login.jpeg"></div>
+    <div class="content_img"><img src="img/login.jpg"></div>
     <div class="content_form">
       <form>
-        <h2>INGRESA TUS DATOS PARA <br>INICIAR SECION</h2>
+        <h2>INGRESA TUS DATOS PARA <br>INICIAR SESIÓN</h2>
         <input type="text" name="codigo" placeholder="Codigo" class="input"><br><br>
         <input type="text" name="contraseña" placeholder="contraseña" class="input "><br><br>
         <a class="allign_rigth">Recuperar contraseña</a><br>
         <input type="submit" value="Iniciar secion" class="buttom">
       </form>
       <div class="allign_center">
-        <p>¿Necesitas ayuda? ¡Contactanos!</p>
+        <p>¿Necesitas ayuda? ¡Contáctanos!</p>
         <div class="content_icon">
           <ion-icon name="logo-whatsapp" size="large"></ion-icon>
         </div>
       </div>
     </div>
     <div class="barras_horizontales foot allign_center">
-      Politica de privacidad<p>
+      Política de privacidad<p>
         Gestor de Censo Nacional-Perù 2024
     </div>
   </div>
