--- a/V CICLO/Taller de Programacion Web/login.html
+++ b/V CICLO/Taller de Programacion Web/login.html
@@ -10,27 +10,32 @@
 
 <body>
   <div class="grid">
-    <div class="barras_horizontales barra_superior">GCN</div>
-    <div class="content_img"><img src="img/login.jpg"></div>
+    <div class="barras_horizontales logo">GCN</div>
+    <div class="content_img"><img src="img/logo.png"></div>
     <div class="content_form">
       <form>
         <h2>INGRESA TUS DATOS PARA <br>INICIAR SESIÓN</h2>
-        <input type="text" name="codigo" placeholder="Codigo" class="input"><br><br>
-        <input type="text" name="contraseña" placeholder="contraseña" class="input "><br><br>
+        <input type="text" name="codigo" placeholder="Código" class="input"><br><br>
+        <input type="text" name="contraseña" placeholder="Contraseña" class="input "><br><br>
         <a class="allign_rigth">Recuperar contraseña</a><br>
-        <input type="submit" value="Iniciar secion" class="buttom">
+        <input type="submit" value="Iniciar sesión" class="buttom">
       </form>
+
       <div class="allign_center">
-        <p>¿Necesitas ayuda? ¡Contáctanos!</p>
+        <p class="help">¿Necesitas ayuda? ¡Escríbenos!</p>
         <div class="content_icon">
           <ion-icon name="logo-whatsapp" size="large"></ion-icon>
         </div>
       </div>
     </div>
+
     <div class="barras_horizontales foot allign_center">
-      Política de privacidad<p>
-        Gestor de Censo Nacional-Perù 2024
+      <a href="terminos.html">Política de Privacidad</a>
+      <p>
+      Gestor de Censo Nacional - Perú © 2024
     </div>
+
+
   </div>
 
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
