cambios rama desde lap

--- a/V CICLO/Taller de Programacion Web/login.html
+++ b/V CICLO/Taller de Programacion Web/login.html
@@ -10,15 +10,15 @@
 
 <body>
   <div class="grid">
-    <div class="barras_horizontales barra_superior">GCN</div>
+    <div class="barra_superior">GCN</div>
     <div class="content_img"><img src="img/login.jpg"></div>
     <div class="content_form">
       <form>
         <h2>INGRESA TUS DATOS PARA <br>INICIAR SESIÓN</h2>
-        <input type="text" name="codigo" placeholder="Codigo" class="input"><br><br>
-        <input type="text" name="contraseña" placeholder="contraseña" class="input "><br><br>
+        <input type="text" name="codigo" placeholder="Código" class="input"><br><br>
+        <input type="text" name="contraseña" placeholder="Contraseña" class="input "><br><br>
         <a class="allign_rigth">Recuperar contraseña</a><br>
-        <input type="submit" value="Iniciar secion" class="buttom">
+        <input type="submit" value="Iniciar sesión" class="buttom">
       </form>
       <div class="allign_center">
         <p>¿Necesitas ayuda? ¡Contáctanos!</p>
@@ -27,9 +27,9 @@
         </div>
       </div>
     </div>
-    <div class="barras_horizontales foot allign_center">
+    <div class="barra_inferior">
       Política de privacidad<p>
-        Gestor de Censo Nacional-Perù 2024
+        Gestor de Censo Nacional-Perú 2024
     </div>
   </div>
 
