cambios en index.html, queda pendiente text

--- a/V CICLO/Taller de Programacion Web/index.html
+++ b/V CICLO/Taller de Programacion Web/index.html
@@ -35,13 +35,13 @@
 
 <div class="botones">
     <div class="grupo-botones1">
-        <button class="btn">Agregar</button>
-        <button class="btn">Modificar</button>
-        <button class="btn">Eliminar</button>
+        <a href="Agregar.html" class="btn">Agregar</a>
+        <a href="Modificar.html" class="btn">Modificar</a>
+        <a href="Eliminar.html" class="btn">Eliminar</a>
     </div>
     <div class="grupo-botones2">
-        <button class="btn">Buscar</button>
-        <button class="btn">Estadísticas</button>
+        <a href="Buscar.html" class="btn">Buscar</a>
+        <a href="Estadísticas.html" class="btn">Estadísticas</a>
     </div>
 </div>
 
