--- a/V CICLO/Taller de Programacion Web/index.html
+++ b/V CICLO/Taller de Programacion Web/index.html
@@ -35,16 +35,30 @@
 
 <div class="botones">
     <div class="grupo-botones1">
-        <a href="Agregar.html" class="btn">Agregar</a>
-        <a href="Modificar.html" class="btn">Modificar</a>
-        <a href="Eliminar.html" class="btn">Eliminar</a>
+        <div class="boton-descripcion">
+            <a href="Agregar.html" class="btn">Agregar</a>
+            <div class="descripcion">Permite ingresar nuevos registros al sistema del censo nacional.</div>
+        </div>
+        <div class="boton-descripcion">
+            <a href="Modificar.html" class="btn">Modificar</a>
+            <div class="descripcion">Permite modificar los datos de un registro existente en la base de datos del censo nacional.</div>
+        </div>
+        <div class="boton-descripcion">
+            <a href="Eliminar.html" class="btn">Eliminar</a>
+            <div class="descripcion">Permite eliminar registros seleccionados de la base de datos del censo nacional.</div>
+        </div>
     </div>
     <div class="grupo-botones2">
-        <a href="Buscar.html" class="btn">Buscar</a>
-        <a href="Estadísticas.html" class="btn">Estadísticas</a>
+        <div class="boton-descripcion">
+            <a href="Buscar.html" class="btn">Buscar</a>
+            <div class="descripcion">Permite activar la función de búsqueda que te permitirá encontrar rápidamente registros específicos en la base de datos del censo nacional.</div>
+        </div>
+        <div class="boton-descripcion">
+            <a href="Estadisticas.html" class="btn">Estadísticas</a>
+            <div class="descripcion">Explora nuestras estadísticas para obtener información detallada sobre la población nacional.</div>
+        </div>
     </div>
 </div>
-
 
 <div class="footer">
     <div class="footer-links">
@@ -54,12 +68,6 @@
         Gestor de Censo Nacional - Perú © 2024
     </div>
 </div>
-
-
-
-
-
-
 
 </body>
 </html>
