--- a/V CICLO/Taller de Programacion Web/index.html
+++ b/V CICLO/Taller de Programacion Web/index.html
@@ -50,7 +50,7 @@
     </div>
     <div class="grupo-botones2">
         <div class="boton-descripcion">
-            <a href="Buscar.html" class="btn">Buscar</a>
+            <a href="Buscar.html" class="btn buscar">Buscar</a>
             <div class="descripcion">Permite activar la función de búsqueda que te permitirá encontrar rápidamente registros específicos en la base de datos del censo nacional.</div>
         </div>
         <div class="boton-descripcion">
