--- a/V CICLO/Taller de Programacion Web/index.html
+++ b/V CICLO/Taller de Programacion Web/index.html
@@ -36,7 +36,7 @@
 <div class="botones">
     <div class="grupo-botones1">
         <div class="boton-descripcion">
-            <a href="Agregar.html" class="btn">Agregar</a>
+            <a href="pagesAdd/Section1.html" class="btn">Agregar</a>
             <div class="descripcion">Permite ingresar nuevos registros al sistema del censo nacional.</div>
         </div>
         <div class="boton-descripcion">
