--- a/V CICLO/Taller de Programacion Web/pagesAdd/Section1/Section1.html
+++ b/V CICLO/Taller de Programacion Web/pagesAdd/Section1/Section1.html
@@ -39,25 +39,25 @@
         </div>
         <form action="procesar_formulario.php" method="POST">
             <div class="Numero_Vivienda">
-                <label for="">VIVIENDA N°</label>
+                <label for=""><b>VIVIENDA N°</b></label>
                 <input type="text" id="numvivienda" name="numero de vivienda">
             </div>
             <div class="ubicacion-geografica">
                 <h3>A. UBICACIÓN GEOGRÁFICA</h3>
                 <div class="grupotexto">
-                    <label for="departamento_codigo">1. DEPARTAMENTO</label>
+                    <label for="departamento_codigo"><b>1. DEPARTAMENTO</b></label>
                     <input type="text" id="departamento_nombre" class="input">
                 </div>
                 <div class="grupotexto">
-                    <label for="provincia_codigo">2. PROVINCIA</label>
+                    <label for="provincia_codigo"><b>2. PROVINCIA</b></label>
                     <input type="text" id="provincia_nombre" class="input">
                 </div>
                 <div class="grupotexto">
-                    <label for="distrito_codigo">3. DISTRITO</label>
+                    <label for="distrito_codigo"><b>3. DISTRITO</b></label>
                     <input type="text" id="distrito_nombre" class="input">
                 </div>
                 <div class="grupotexto">
-                    <label for="centro_poblado_codigo">4. CENTRO POBLADO</label>
+                    <label for="centro_poblado_codigo"><b>4. CENTRO POBLADO</b></label>
                     <input type="text" id="centro_poblado_nombre" class="input">
                 </div>
             </div>
@@ -86,7 +86,7 @@
                     <input type="text" id="aer" class="input">
                 </div>
                 <div class="grupotexto">
-                    <label for="vivienda_dir"><b>DIRECCIÓN DE LA VIVIENDA</b></label>
+                    <label for="vivienda_dir"><b>12. DIR. DE LA VIVIENDA</b></label>
                     <label for="tipo_via">Tipo de vía: </label>
                     <select name="tipo_via" >
                         <option value="avenida">Avenida</option>
@@ -103,6 +103,12 @@
                     <label for="piso">Piso</label>
                     <input type="text" class="input">
                     <label for="Manzana">Manzana</label>
+                    <input type="text" class="input">
+                </div>
+                <div class="grupotexto">
+                    <label for="TotalHogares"><b>13. TOTAL DE HOGARES</b></label>
+                    <input type="text" class="input">
+                    <label for="N°Hogar"><b>14. HOGAR N°</b></label>
                     <input type="text" class="input">
                 </div>
             </div>
