--- a/Desktop/Project/Pages/html/Modify.html
+++ b/Desktop/Project/Pages/html/Modify.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Modificar Datos</title>
+    <link rel="stylesheet" href="/Pages/css/stylesMo.css">
 </head>
 <body>
-    
+    <!-- Barra de Navegación -->
+    <div class="navbar">
+        <div class="logo">GCN</div>
+        <div class="navbar-links">
+            <a href="/index.html">Inicio</a>
+            <a href="contacto.html">Contacto</a>
+            <div class="dropdown">
+                <button class="dropbtn"><img src="/Img/persona.png" alt="btnperfil" class="perfil"></button>
+                <div class="dropdown-content">
+                    <a href="perfil.html">Perfil</a>
+                    <a href="#">Cerrar Sesión</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="contenido">
+        <div class="subtitulo">
+            <h2>MODIFICAR DATOS DEL CENSO</h2>
+        </div>
+
+        <div class="form-container">
+            <form id="modificarForm">
+                <label for="entidad">Seleccionar Entidad:</label>
+                <select id="entidad" name="entidad" onchange="cargarCampos()">
+                    <option value="">Seleccione una entidad</option>
+                    <option value="encuestador">Encuestador</option>
+                    <option value="persona">Persona</option>
+                    <option value="vivienda">Vivienda</option>
+                    <option value="hogar">Hogar</option>
+                    <option value="direccion">Dirección</option>
+                    <option value="infraestructura">Infraestructura</option>
+                </select>
+
+                <div id="campos"></div>
+
+                <button type="submit">Modificar</button>
+            </form>
+        </div>
+    </div>
+
+    <script src="/Pages/JS/ScriptMo.js"></script>
 </body>
 </html>
